# storewide-loss-prevention-retail

./: .gitignore  .gitmodules  Makefile  README.md  init.sh
.github/instructions/: docker.instructions.md  gen-ai.instructions.md  llm.instructions.md  poi-context.instructions.md  python.instructions.md  vlm.instructions.md
.github/mcp/: mcp.json
.github/prompts/: code-reviewer.prompt.md  docker.prompt.md  document.prompt.md  llm.prompt.md  python.prompt.md  system-design.prompt.md  vlm.prompt.md
.github/workflows/: copilot-setup-steps.yml  trivy-scan.yaml
docker/: .env.full.example  docker-compose.full.yaml
person-of-interest/: .env  .env.example  .gitignore  Makefile  POI Re-identification.docx  README.md  camera1.json  docker-compose.npu-overrides.yml  docker-compose.scenescape-overrides.yml  docker-compose.yml  event1.json  requirement.md
person-of-interest/backend/: Dockerfile  (+3 more)
scenescape/: Makefile  README.md  docker-compose.yaml
suspicious-activity-detection/: .gitignore  Makefile  README.md  init.sh  install.sh  sources.Dockerfile
suspicious-activity-detection/src/: Dockerfile  main.py  pyproject.toml
suspicious-activity-detection/src/api/: routes.py
suspicious-activity-detection/src/models/: __init__.py  alerts.py  events.py  session.py
suspicious-activity-detection/src/services/: __init__.py  alert_publisher.py  alert_service_client.py  behavioral_analysis_client.py  config.py  frame_manager.py  mqtt_service.py  rule_engine.py  session_manager.py
suspicious-activity-detection/src/tests/: test_rule_engine.py  test_session_manager.py
(+105963 files in other folders)
